--- a/_posts/2017-12-02-roc.markdown
+++ b/_posts/2017-12-02-roc.markdown
@@ -114,4 +114,5 @@ if __name__ == "__main__":
     main()
 
 ```
-![result](/assets/roc.png){:class="img-responsive"}
+
+![result](/assets/roc.png){:width="100%"}
