--- a/_posts/2017-12-02-roc.markdown
+++ b/_posts/2017-12-02-roc.markdown
@@ -9,7 +9,7 @@ categories: ROC python
 
 > This is an introductory overview in what i have undestand as ROC [Receiver operating characteristic](https://en.wikipedia.org/wiki/Receiver_operating_characteristic)
 
-More {% highlight c %}HHH{% endhighlight %}
+More `HH` codigo
 
 Following comes a traduction on python of an example video that show how ROC works [video](https://www.youtube.com/watch?v=11AbEeCLKOw&t=416s)
 
