--- a/_posts/2017-12-02-roc.markdown
+++ b/_posts/2017-12-02-roc.markdown
@@ -15,8 +15,7 @@ Following comes a traduction on python of an example video that show how ROC wor
 
 
 
-```
-
+```python
 import numpy as np
 import matplotlib.pyplot as plt 
 
