--- a/_posts/2017-12-02-roc.markdown
+++ b/_posts/2017-12-02-roc.markdown
@@ -42,6 +42,30 @@ We list all the different values, and count in the right the number of cases >= 
 
 Note: Last row of result (0, 0) has been added if there is no case that none of both positive and negative is 0.
 
+I have plotted the result manually by doing the same procedure with python code and comparing results with the roc_curve library that does the same. Both results can be shown after the code.
+
+```{.python .input  n=1}
+a = 1
+```
+
+```{.python .input  n=2}
+a
+```
+
+```{.json .output n=2}
+[
+ {
+  "data": {
+   "text/plain": "1"
+  },
+  "execution_count": 2,
+  "metadata": {},
+  "output_type": "execute_result"
+ }
+]
+```
+
+
 ```python
 import numpy as np
 import matplotlib.pyplot as plt 
