--- a/_posts/2017-12-09-monty.markdown
+++ b/_posts/2017-12-09-monty.markdown
@@ -4,7 +4,7 @@ title: Bayes theorem (Monty Hall problem)
 date: 2017-12-09 13:32
 comments: true
 external-url:
-categories: ROC python
+categories: bayes math
 ---
 
 > Monty Hall problem is a famous probability puzzle: You are in a game show, and in front of you are three doors: Behind one of them there is a car and behind the others goats. You pick a door (1 or 2 or 3) and the hosts, who knows what's behind doors, opens another door, that has a goat behind. Then asks you: "Do you keep to choose the same door?", it is your advantage to switch your door?
@@ -14,8 +14,11 @@ categories: ROC python
 This could be one of the intuitive ways to determinte every case and compute the sum of each result:
 
 door: initial door picked
+
 car: door where the car is hiden
+
 switch: action to switch 0=Stick 1=Change
+
 result: result of the game 0=goat 1=car
 
 | door     | car | switch | result |
@@ -40,8 +43,13 @@ result: result of the game 0=goat 1=car
 | 3        | 2   | 1      | 1      |
 
  $$ \text{total cases}  = {18}.$$
+
  $$ \text{total cases with car result}  = {9}.$$
+
  $$ \text{total cases that stick with car result}  = {3}.$$
+
  $$ \text{total cases that change with car result}  = {6}.$$
+
  $$ \text{car probability that stick}  = {3 \over 9}.$$
+ 
  $$ \text{car probability that change}  = {6 \over 9}.$$
