--- a/_posts/2017-12-09-monty.markdown
+++ b/_posts/2017-12-09-monty.markdown
@@ -78,7 +78,18 @@ $$P(H=2|C=3)= 1$$
 
 Now we want to know whether to stick with door #1 or switch to door #3 (Monty has opened door #2)
 
-$$\text{Probability if stick in #1 door}=P(C=1|H=2)={P(H=2|C=1)*P(C=1) \over{P(H=2|C=1)*P(C=1)+P(H=2|C=2)*P(C=2)+P(H=2|C=3)*P(C=3)}}.$$
+$$\text{Probability if stick in #1 door}=P(C=1|H=2)$$
+
+$$P(C=1|H=2)={P(H=2|C=1)*P(C=1) \over{P(H=2|C=1)*P(C=1)+P(H=2|C=2)*P(C=2)+P(H=2|C=3)*P(C=3)}}.$$
+
+$$P(C=1|H=2)={(1/2)*(1/3) \over {(1/2) * (1/3) + 0 * (1/3)  + 1 * (1/3)}}= {1 \over 3}$$
+
+$$\text{Probability if change to #3 door}=P(C=3|H=2)$$
+
+$$P(C=3|H=2)={P(H=2|C=3)*P(C=3) \over{P(H=2|C=3)*P(C=1)+P(H=2|C=2)*P(C=2)+P(H=2|C=3)*P(C=3)}}.$$
+
+$$P(C=3|H=2)={1*(1/3) \over {(1/2) * (1/3) + 0 * (1/3)  + 1 * (1/3)}}= {2 \over 3}$$
+
 
 
 
